--- a/dockerfiles/000-default.conf
+++ b/dockerfiles/000-default.conf
@@ -2,7 +2,7 @@
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html
     <Directory /var/www/html>
-        Options -Indexes FollowSymLinks MultiViews
+        Options -Indexes +FollowSymLinks +MultiViews
         AllowOverride All
         Order allow,deny
         allow from all
