--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Put dockerfile in main directory
         run: |
           cp -r ./dockerfiles/Dockerfile ./Dockerfile
